完成了节点下标改变的问题

--- a/src/tree/style/style.less
+++ b/src/tree/style/style.less
@@ -76,6 +76,9 @@
                         border-bottom: 1px dashed #AAA;
                     }
                 }
+                .node-ondrag .tree-line{
+                    display: none;
+                }
                 .node-title{
                     cursor: pointer;
                     padding: 4px;
