--- a/src/tree/style/style.less
+++ b/src/tree/style/style.less
@@ -1,21 +1,23 @@
 @import "./var.less";
 @import "./base.less";
 .cirnotree{
-    position: absolute;
+    position: relative;
     width: 100%;
 	height: 100%;
 	max-height: 100%;
-	padding-left: 10px;
 	left: 0;
     top: 0;
 	z-index: 100;
-	overflow-y: hidden;
+	overflow: hidden;
 	.noselect();
+	.tree-box{
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		z-index: 101;
+	}
     .tree-list{
-        position: relative;
-        overflow-x: auto;
-        overflow-y: hidden;
-        width: 100%;
+        position: absolute;
         height: 100%;
         .tree-node{
             position: relative;
@@ -163,7 +165,8 @@
         right: 0;
         width: 5px;
         height: 100%;
-        padding-bottom: 6px;
+		padding-bottom: 6px;
+		z-index: 105;
         .rail,.scroller{
             width: 100%;
             border-radius: 2px;
@@ -180,5 +183,30 @@
             background-color: #adb5bd;
 
         }
-    }
+	}
+	.scroll-bar-h{
+		position: absolute;
+        bottom: 0;
+        left: 0;
+        height: 5px;
+        width: 100%;
+		padding-right: 6px;
+		z-index: 105;
+        .rail,.scroller{
+            height: 100%;
+            border-radius: 2px;
+        }
+        .rail{
+            position: relative;
+            overflow: hidden;
+            width: 100%;
+            background-color: #dee2e6;
+        }
+        .scroller{
+            position: absolute;
+            width: 100%;
+            background-color: #adb5bd;
+
+        }
+	}
 }
